--- a/docs/cs/wp/cf896.md
+++ b/docs/cs/wp/cf896.md
@@ -1,3 +1,7 @@
+---
+stas: true
+---
+
 # Codeforces Round 896 Div.2
 
 !!! info "Preference"
@@ -24,7 +28,7 @@
 
     **输入格式**
 
-    - 输入的第一行包含一个整数t$(1\leq t \leq 500)$,表示测试用例的数量.
+    - 输入的第一行包含一个整数$t(1\leq t \leq 500)$,表示测试用例的数量.
     - 测试用例的第一行包含一个整数n$(2\leq n\leq 100)$,表示数组的长度.
     - 测试用例的第二行包含$n$个整数$a_1,a_2,...,a_n(0≤a_i≤100)$,即数组$a$的元素.
 
